@@ -2,6 +2,7 @@ Revision history for perl distribution Mojolicious-Plugin-AssetPack
 
 0.65 Not Released
  - Remove EXPERIMENTAL support for reloader.js
+ - Remove support for in-memory assets #64
 
 0.64 2015-09-20T11:44:26+0200
  - Add "SHIPPING" section to Cookbook
